--- a/yu/myWebsite/css/styles.css
+++ b/yu/myWebsite/css/styles.css
@@ -1,11 +1,19 @@
-body{
-    background-color: #F2E7D5;
-  }
-  hr
-  {
-    border-style: none;
-    border-top-style: dotted;
-    border-width: 5px;
-    width: 5%;
-    border-color:grey;        
-  }
+body
+{
+        background-color: #F2E7D5;
+}
+hr
+{
+        border-style: none;
+        border-top-style: dotted;
+        border-width: 5px;
+        width: 5%;
+        border-color:rgb(76, 177, 77);
+}
+h1{
+    color:#0467a5;
+}
+h3{
+    color: #66bfe6;;
+
+}
