--- a/yu/stylizedWebSite/css/styles.css
+++ b/yu/stylizedWebSite/css/styles.css
@@ -1,5 +1,5 @@
 div {
-    background-color: #8D9EFF;
+    background-color: #144272;
     margin:0;
 
 
@@ -15,6 +15,3 @@ p{
 body{
     margin: 0;
 }
-/* div{
-    background-color: aqua;
-} */
